--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script language="javascript" type="text/javascript" src="edge.js"></script>
   <script language="javascript" type="text/javascript" src="hankin.js"></script>
   <script language="javascript" type="text/javascript" src="polygon.js"></script>
+  <script language="javascript" type="text/javascript" src="HexagonalTiling.js"></script>
 </head>
 
 <body>
