--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-  <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="edge.js"></script>
-  <script language="javascript" type="text/javascript" src="hankin.js"></script>
-  <script language="javascript" type="text/javascript" src="polygon.js"></script>
-  <script language="javascript" type="text/javascript" src="HexagonalTiling.js"></script>
+    <meta charset="UTF-8">
+    <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript" src="sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="edge.js"></script>
+    <script language="javascript" type="text/javascript" src="hankin.js"></script>
+    <script language="javascript" type="text/javascript" src="polygon.js"></script>
+    <script language="javascript" type="text/javascript" src="HexagonalTiling.js"></script>
 </head>
 
 <body>
+
+    <div id="canvasContainer">
+
+    </div>
+
+    <div id="interface">
+        delta: <input id="delta" type="range" min="0" max="25">
+        angle: <input id="angle" type="range" min="0" max="90" value="60">
+        <br />
+        tiling: <select id="tiling"><option value="hexagonal">hexagonal</option><option value="square">square</option></select>
+        <br />
+        show grid: <input id="showGrid" type="checkbox" checked>
+    </div>
 </body>
+
 </html>
