Another tiling added

--- a/index.livereload.html
+++ b/index.livereload.html
@@ -32,5 +32,5 @@
         show grid: <input id="showGrid" type="checkbox" checked>
     </div>
 </body>
-<!-- <script src="//localhost:35729/livereload.js"></script> -->
+<script src="//localhost:35729/livereload.js"></script>
 </html>
