--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script language="javascript" type="text/javascript" src="polygon.js"></script>
     <script language="javascript" type="text/javascript" src="HexagonalTiling.js"></script>
     <script language="javascript" type="text/javascript" src="DodecaHexaSquareTiling.js"></script>
+    <script language="javascript" type="text/javascript" src="HexaTriangleSquareTiling.js"></script>
 </head>
 
 <body>
@@ -24,6 +25,7 @@
         angle: <input id="angle" type="range" min="0" max="90" value="60">
         <br />
         tiling: <select id="tiling">
+            <option value="hexa_triangle_square">hexa_triangle_square</option>
             <option value="dodeca_hex_square">dodeca_hex_square</option>
             <option value="hexagonal">hexagonal</option>
             <option value="square">square</option>
@@ -32,5 +34,5 @@
         show grid: <input id="showGrid" type="checkbox" checked>
     </div>
 </body>
-<!-- <script src="//localhost:35729/livereload.js"></script> -->
+<script src="//localhost:35729/livereload.js"></script>
 </html>
