--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script language="javascript" type="text/javascript" src="hankin.js"></script>
   <script language="javascript" type="text/javascript" src="polygon.js"></script>
   <script language="javascript" type="text/javascript" src="HexagonalTiling.js"></script>
+  <script language="javascript" type="text/javascript" src="SquareOctagonTiling.js"></script>
 </head>
 
 <body>
