--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
         delta: <input id="delta" type="range" min="0" max="25">
         angle: <input id="angle" type="range" min="0" max="90" value="60">
         <br />
-        tiling: <select id="tiling">
+        tiling:
+        <select id="tiling">
+          <option value="square">square</option>
           <option value="hexagonal">hexagonal</option>
           <option value="4.8.8">4.8.8</option>
+          <option value="hexa_triangle_square">hexa_triangle_square</option>
+          <option value="dodeca_hex_square">dodeca_hex_square</option>
+          <option value="hexagonal">hexagonal</option>
           <option value="square">square</option>
-            <option value="hexa_triangle_square">hexa_triangle_square</option>
-            <option value="dodeca_hex_square">dodeca_hex_square</option>
-            <option value="hexagonal">hexagonal</option>
-            <option value="square">square</option>
         </select>
         <br />
         show grid: <input id="showGrid" type="checkbox" checked>
