--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
@@ -13,34 +13,53 @@
     <script language="javascript" type="text/javascript" src="SquareOctagonTiling.js"></script>
     <script language="javascript" type="text/javascript" src="DodecaHexaSquareTiling.js"></script>
     <script language="javascript" type="text/javascript" src="HexaTriangleSquareTiling.js"></script>
-</head>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.css'>
+    <link rel='stylesheet prefetch' href='https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
+    <link rel="stylesheet" href="sitestuff/css/style.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-<body>
-
-    <div id="canvasContainer">
-
-    </div>
-
-    <div id="interface">
-        delta: <input id="delta" type="range" min="0" max="25">
-        angle: <input id="angle" type="range" min="0" max="90" value="60">
-        <br />
-        tiling:
-        <select id="tiling">
-          <option value="square">square</option>
-          <option value="hexagonal">hexagonal</option>
-          <option value="4.8.8">4.8.8</option>
-          <option value="hexa_triangle_square">hexa_triangle_square</option>
-          <option value="dodeca_hex_square">dodeca_hex_square</option>
-          <option value="hexagonal">hexagonal</option>
-          <option value="square">square</option>
-        </select>
-        <br />
-        show grid: <input id="showGrid" type="checkbox" checked>
-        <br />
-        angle increase: <input id="angleIncrease" type="range" min="0.0" max="2.0" step="0.01" value="0">
-        delta increase: <input id="deltaIncrease" type="range" min="0.0" max="2.0" step="0.01" value="0">
-        change cycle: <input id="cycleIncrease" type="range" min="0.0" max="6.28" step="0.01" value="0">
-    </div>
-</body>
+    <body>
+        <div id="site-1">
+            <div id="canvasContainer"> </div>
+            <div id="interface">
+                <div id="delta-1"> Delta:
+                    <input class="mdl-slider mdl-js-slider" id="delta" type="range" min="0" max="25"> </div>
+                <div id="angle-1"> Angle:
+                    <input class="mdl-slider mdl-js-slider" id="angle" type="range" min="0" max="90" value="60"> </div>
+                <div id="change-type">
+                    <button class="mdl-button mdl-button--raised mdl-js-button dialog-button">Change Type</button>
+                </div>
+                <div id="grid-1">
+                    <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="showGrid">
+                        <p id="grid-2">Show Grid:</p>
+                        <input type="checkbox" id="showGrid" class="mdl-switch__input" checked> <span class="mdl-switch__label"></span> </label>
+                </div>
+                <div id="angle-2"> Angle Increase:
+                    <input class="mdl-slider mdl-js-slider" id="angleIncrease" type="range" min="0.0" max="2.0" step="0.01" value="0"> </div>
+                <div id="delta-2"> Delta Increase:
+                    <input class="mdl-slider mdl-js-slider" id="deltaIncrease" type="range" min="0.0" max="2.0" step="0.01" value="0"> </div>
+                <div id="change-2"> Change Cycle:
+                    <input class="mdl-slider mdl-js-slider" id="cycleIncrease" type="range" min="0.0" max="6.28" step="0.01" value="0"> </div>
+            </div>
+            <dialog id="dialog" class="mdl-dialog">
+                <h3 class="mdl-dialog__title">Change Type</h3>
+                <div class="mdl-dialog__content">
+                    <select id="tiling">
+                        <option value="square">Square</option>
+                        <option value="hexagonal">Hexagonal</option>
+                        <option value="4.8.8">4.8.8</option>
+                        <option value="hexa_triangle_square">Hexa Triangle Square</option>
+                        <option value="dodeca_hex_square">Dodeca Hex Square</option>
+                        <option value="hexagonal">Hexagonal</option>
+                    </select>
+                </div>
+                <div class="mdl-dialog__actions">
+                    <button type="button" class="mdl-button">Done</button>
+                </div>
+            </dialog>
+        </div>
+    </body>
+    <script src="sitestuff/js/index.js"></script>
 </html>
