added star levels to the sketch

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div id="interface">
         delta: <input id="delta" type="range" min="0" max="25">
         angle: <input id="angle" type="range" min="0" max="90" value="60">
+		level: <input id="level" type="range" min="0" max="5" value="1" step="1">
         <br />
         tiling:
         <select id="tiling">
