Added zoom functionality slider to the slider panel that allows user to change the size of each polygon. It is not normalized for shape but it is easy to change the size with the slider.  The value is stored in the global variable: zoom

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <div id="interface">
 
         <div class="mui-panel mui--z2 green">
-        Delta <input class="mdl-slider mdl-js-slider" id="delta" type="range" min="0" max="25">
+        Zoom: <input class="mdl-slider mdl-js-slider" id="zoom" type="range" min="10" max="200">
+        Delta: <input class="mdl-slider mdl-js-slider" id="delta" type="range" min="0" max="25">
         Angle: <input class="mdl-slider mdl-js-slider" id="angle" type="range" min="0" max="90" value="60">
 		    Level: <input class="mdl-slider mdl-js-slider" id="level" type="range" min="0" max="5" value="1" step="1">
         </div>
